--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,85 +1,131 @@
-# Single source of truth for links + sections.
-# Add new cards by copying an item and editing fields.
+# Single source of truth for /projects cards + section lists.
+# Keep descriptions factual and stable; avoid hype/claims you can't verify publicly.
+#
 # Fields:
 # - title (required)
 # - url (required)
-# - description (recommended)
+# - description (recommended) 1–2 lines
+# - detail (optional) longer paragraph (used later if you add "read more" UI)
 # - tags (optional list)
 # - status (optional): active | in_development | archived
 # - featured (optional boolean)
-
-# ---------------------------
-# TEMPLATE: Add a pinned link
-# ---------------------------
-# Add a new item under pinned::
-# - title: "Example"
-#   url: "https://example.com/"
-#   description: "One-line description."
-#   tags: ["Tools"]
-#   status: active
-#   featured: true
-#
-# ------------------------------
-# TEMPLATE: Add a link to a section
-# ------------------------------
-# Find the section under sections: and add items under items::
-# sections:
-#   - id: "tools"
-#     title: "Tools"
-#     blurb: "Small utilities, demos, and public repos."
-#     items:
-#       - title: "My Tool"
-#         url: "https://example.com/tool"
-#         description: "What it does."
-#         tags: ["CLI", "Demo"]
-#         status: in_development
+# - repo (optional): GitHub repo URL
+# - demo (optional): demo URL (if different)
+# - notes (optional): short, neutral disclaimer/context
 
 pinned:
   - title: "Tillerstead"
     url: "https://tillerstead.com/"
-    description: "Commercial/Residential construction, expert compliant tile installations, and custom property maintenance service plans."
-    tags: ["Business"]
+    description: "Commercial/residential construction with a focus on compliant tile work, remodel support, and property maintenance plans."
+    detail: "Tillerstead is the public front for field work: tile/stone installations, repair/refresh scopes, small builds, and recurring maintenance. This hub will evolve as services and portfolio items are published."
+    tags: ["Business", "Construction", "Tile", "Property Maintenance"]
     status: active
     featured: true
 
   - title: "Faith Frontier"
     url: "https://faithfrontier.org/"
-    description: "Faith-based stewardship and community accountability."
-    tags: ["Mission"]
+    description: "Faith-based stewardship and community accountability with a commitment to transparent, principle-driven publishing."
+    detail: "Faith Frontier is a mission-aligned public site for governance, records, and long-form documentation. It’s designed to be readable by the public and easy to audit over time."
+    tags: ["Mission", "Governance", "Public Record"]
     status: active
     featured: true
 
   - title: "Barber Cam Preview"
     url: "https://dtb396.github.io/barber-cam-preview/"
-    description: "Public demo preview site."
-    tags: ["Works"]
+    description: "Public demo preview site for the Barber Cam concept and UI/UX experiments."
+    detail: "A lightweight preview environment used to demo workflows and visuals. Public content only—no private repo material or sensitive data."
+    tags: ["Tools", "Demo", "UI"]
     status: active
     featured: true
 
   - title: "GitHub Profile"
     url: "https://github.com/DTB396"
-    description: "Open-source and public work."
-    tags: ["Tools"]
+    description: "Primary index of public repositories, experiments, and published source."
+    detail: "This is where code lives when it’s ready to be public. Individual repos may have separate licenses and maturity levels."
+    tags: ["Tools", "Source"]
     status: active
     featured: true
 
 sections:
   - id: "business"
     title: "Business"
-    blurb: "Operational work, services, and commercial builds."
-    items: []
+    blurb: "Operational work, service delivery, and commercial-facing systems."
+    items:
+      - title: "Tillerstead — Main Site"
+        url: "https://tillerstead.com/"
+        description: "Public home for services, scope guidance, and portfolio publishing (as available)."
+        detail: "Focus: compliant installs, durable finishes, and clear expectations. Over time, this will include process notes, photo sets, and job-type explainers (not client-sensitive details)."
+        tags: ["Website", "Services", "Portfolio"]
+        status: active
+
+      - title: "Client-ready documentation (templates)"
+        url: "https://tillerstead.com/"
+        description: "Plain-language documentation patterns for estimates, scopes, and change control."
+        detail: "Project goal is to keep paperwork simple and auditable: what’s included, what’s excluded, and how variations are handled."
+        tags: ["Process", "Documentation"]
+        status: in_development
+        notes: "Links may be consolidated under the main site until published."
 
   - id: "mission"
     title: "Mission"
     blurb: "Values-aligned initiatives and public-interest work."
-    items: []
+    items:
+      - title: "Faith Frontier — Governance + Records"
+        url: "https://faithfrontier.org/"
+        description: "Framework for stewardship, accountability, and consistent publishing standards."
+        detail: "Designed to separate belief/mission from operational claims: clear labels, dated notes, and a bias toward primary sources."
+        tags: ["Governance", "Ethics", "Publishing"]
+        status: active
+
+      - title: "Case record pages (public transparency)"
+        url: "https://faithfrontier.org/"
+        description: "Public-facing case pages with structured records and attachments when appropriate."
+        detail: "Where filings and exhibits are published only when intended for public release. Goal: easy navigation, consistent naming, and clear disclaimers."
+        tags: ["Public Record", "Documentation"]
+        status: in_development
+        notes: "Only publish what you can legally and ethically publish."
 
   - id: "tools"
     title: "Tools"
-    blurb: "Small utilities, demos, and public repos."
-    items: []
+    blurb: "Utilities, demos, and code that reduces friction in real workflows."
+    items:
+      - title: "Barber Cam — Preview Demo"
+        url: "https://dtb396.github.io/barber-cam-preview/"
+        description: "Public UI/UX preview for a media intake + organization workflow."
+        detail: "A demo surface for layouts, navigation, and basic interactions. Intended as a safe public slice of a larger toolchain."
+        tags: ["Demo", "Static Site", "Workflow"]
+        status: active
+        demo: "https://dtb396.github.io/barber-cam-preview/"
+
+      - title: "DTB396 Public Hub (this site)"
+        url: "https://dtb396.github.io/dTb396/"
+        description: "A minimal, durable GitHub Pages portfolio: projects, principles, and contact."
+        detail: "Built to stay fast and maintainable: static pages, simple data files, and clean component structure."
+        tags: ["Jekyll", "GitHub Pages", "Portfolio"]
+        status: active
+
+      - title: "GitHub — Public Repos"
+        url: "https://github.com/DTB396"
+        description: "Source code and public experiments. Each repo documents its own scope and license."
+        detail: "If something is early, it’s labeled that way. If something is mature, it gets a tighter README and changelog."
+        tags: ["Source", "Open Work"]
+        status: active
 
   - id: "ideas"
     title: "Ideas (In Development)"
     blurb: "Explorations and drafts. Not commitments—just what I’m testing."
-    items: []
+    items:
+      - title: "BWC / Dashcam discovery intake workflow"
+        url: "https://dtb396.github.io/barber-cam-preview/"
+        description: "Exploring a clean pipeline for organizing large media drops for review and disclosure."
+        detail: "Focus areas: folder normalization, metadata extraction, redaction-aware handling, and human-review friendly outputs."
+        tags: ["Media", "Automation", "Pipeline"]
+        status: in_development
+        notes: "Demo only; avoid publishing sensitive materials."
+
+      - title: "Public documentation standards"
+        url: "https://dtb396.github.io/dTb396/about/"
+        description: "Consistent rules for tone, sourcing, and separating facts from opinions."
+        detail: "Aiming for verifiable language, dated updates, and audit-friendly structure across projects."
+        tags: ["Writing", "Governance", "Standards"]
+        status: in_development
