Clean build config + track lockfile + ignore build output

--- a/_config.yml
+++ b/_config.yml
@@ -3,29 +3,33 @@ description: "A calm, professional portfolio hub for active projects, works, too
 url: "https://dtb396.github.io"
 baseurl: "/dTb396"
 
-# Social image
+# Social image (used by SEO tags / OG cards if you wire them in)
 og_image: "/assets/img/og-card.svg"
 
-# Build
 markdown: kramdown
 theme: null
-plugins: [jekyll-feed]
 
-# Keep build simple and fast
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+
 exclude:
   - README.md
   - LICENSE
   - SECURITY.md
   - CODE_OF_CONDUCT.md
-  - .github
-  - vendor
+  - .github/
+  - vendor/
+  - node_modules/
+  - reports/
+  - .jekyll-cache/
+  - .jekyll-metadata
+  - .sass-cache/
   - Gemfile
   - Gemfile.lock
 
-# Defaults for SEO-ish consistency
 defaults:
   - scope:
       path: ""
     values:
       layout: "default"
-
