--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -47,11 +47,11 @@ contact:
 
 social:
   github: "https://github.com/DTB396"
-  linkedin: "https://www.linkedin.com/in/devon-tyler-barber-392319292/"
-  x: "https://x.com/dtb396"
-  instagram: "https://www.instagram.com/xdtb396/"
-  youtube: "https://www.youtube.com/@dTb396"
-  snapchat: "https://snapchat.com/t/nLT1gRcy"
+  linkedin: "https://www.linkedin.com/in/devon-tyler/"
+  x: "https://x.com/DTB396"
+  youtube: ""
+  instagram: ""
+  email: "contact@xtx396.info"
 
 now_next_looking:
  now:
